--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://repo.spring.io/libs-snapshot'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
