--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUpActivity" />
+        <activity android:name=".CadastrarUsuarioActivity" />
         <activity android:name=".CadastrarCategoriaActivity" />
         <activity
             android:name=".TelaInicialActivity"
