--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/icone_entrada"
@@ -31,6 +32,7 @@
         <activity android:name=".CadastrarTransacaoActivity" />
         <activity android:name=".SobreActivity" />
         <activity android:name=".GraficoActivity" />
+        <activity android:name=".CategoriaActivity"></activity>
     </application>
 
 </manifest>
